--- a/p/migrate-from-jekyl/index.html
+++ b/p/migrate-from-jekyl/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>https://material-art-master.github.io/p/markdown-syntax-guide/</title>
-    <link rel="canonical" href="https://material-art-master.github.io/p/markdown-syntax-guide/">
+    <title>https://material-art-master.github.io/p/codeforces-1771f.-hossam-and-range-minimum-query/</title>
+    <link rel="canonical" href="https://material-art-master.github.io/p/codeforces-1771f.-hossam-and-range-minimum-query/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://material-art-master.github.io/p/markdown-syntax-guide/">
+    <meta http-equiv="refresh" content="0; url=https://material-art-master.github.io/p/codeforces-1771f.-hossam-and-range-minimum-query/">
   </head>
 </html>
